@@ -31,6 +31,7 @@ import com.sun.tools.javac.code.Preview;
 import com.sun.tools.javac.code.Source;
 import com.sun.tools.javac.code.Source.Feature;
 import com.sun.tools.javac.file.JavacFileManager;
+import com.sun.tools.javac.jvm.Target;
 import com.sun.tools.javac.parser.Tokens.Comment.CommentStyle;
 import com.sun.tools.javac.resources.CompilerProperties.Errors;
 import com.sun.tools.javac.resources.CompilerProperties.Warnings;
@@ -43,6 +44,8 @@ import java.util.Set;
 
 import static com.sun.tools.javac.parser.Tokens.*;
 import static com.sun.tools.javac.util.LayoutCharacters.EOI;
+
+import org.frgaal.StringShims;
 
 /**
  * The lexical analyzer maps an input stream consisting of UTF-8 characters and unicode
@@ -68,6 +71,7 @@ public class JavaTokenizer extends UnicodeReader {
      * The source language setting. Copied from scanner factory.
      */
     private final Source source;
+    private final Target target;
 
     /**
      * The preview language setting. Copied from scanner factory.
@@ -180,6 +184,7 @@ public class JavaTokenizer extends UnicodeReader {
         this.names = fac.names;
         this.tokens = fac.tokens;
         this.source = fac.source;
+        this.target = fac.target;
         this.preview = fac.preview;
         this.lint = fac.lint;
         this.sb = new StringBuilder(256);
@@ -197,7 +202,7 @@ public class JavaTokenizer extends UnicodeReader {
         if (preview.isPreview(feature) && !preview.isEnabled()) {
             //preview feature without --preview flag, error
             lexError(DiagnosticFlag.SOURCE_LEVEL, pos, preview.disabledError(feature));
-        } else if (!feature.allowedInSource(source)) {
+        } else if (!feature.allowedInSource(source, target)) {
             //incompatible source level, error
             lexError(DiagnosticFlag.SOURCE_LEVEL, pos, feature.error(source.name));
         } else if (preview.isPreview(feature)) {
@@ -1162,7 +1167,7 @@ public class JavaTokenizer extends UnicodeReader {
                             } else {
                                 char ch = get();
                                 arg = (32 < ch && ch < 127) ? String.valueOf(ch) :
-                                                              "\\u%04x".formatted((int) ch);
+                                                              String.format("\\u%04x", (int) ch);
                             }
 
                             lexError(pos, Errors.IllegalChar(arg));
@@ -1205,7 +1210,7 @@ public class JavaTokenizer extends UnicodeReader {
                     }
                     // Remove incidental indentation.
                     try {
-                        string = string.stripIndent();
+                        string = StringShims.stripIndent(string);
                     } catch (Exception ex) {
                         // Error already reported, just use unstripped string.
                     }
@@ -1219,7 +1224,7 @@ public class JavaTokenizer extends UnicodeReader {
                 // Translate escape sequences if present.
                 if (hasEscapeSequences) {
                     try {
-                        string = string.translateEscapes();
+                        string = StringShims.translateEscapes(string);
                     } catch (Exception ex) {
                         // Error already reported, just use untranslated string.
                     }
@@ -1258,7 +1263,7 @@ public class JavaTokenizer extends UnicodeReader {
         List<Token> tokens = List.nil();
         Iterator<Integer> rangeIter = fragmentRanges.iterator();
         for (String fragment : fragment(string)) {
-            fragment = fragment.translateEscapes();
+            fragment = StringShims.translateEscapes(fragment);
             int fragmentPos = rangeIter.next();
             int fragmentEndPos = rangeIter.next();
             Token token = new StringToken(TokenKind.STRINGFRAGMENT,
