@@ -96,7 +96,9 @@ import static com.sun.tools.javac.code.Lint.LintCategory.PROCESSING;
 import static com.sun.tools.javac.code.Kinds.Kind.*;
 import com.sun.tools.javac.comp.Annotate;
 import static com.sun.tools.javac.comp.CompileStates.CompileState;
+import com.sun.tools.javac.jvm.Target;
 import static com.sun.tools.javac.util.JCDiagnostic.DiagnosticFlag.*;
+import java.util.stream.Collectors;
 
 /**
  * Objects of this class hold and manage the state needed to support
@@ -164,6 +166,7 @@ public class JavacProcessingEnvironment implements ProcessingEnvironment, Closea
      * Source level of the compile.
      */
     Source source;
+    Target target;
 
     private ClassLoader processorClassLoader;
     private ServiceLoader<Processor> serviceLoader;
@@ -204,6 +207,7 @@ public class JavacProcessingEnvironment implements ProcessingEnvironment, Closea
         context.put(JavacProcessingEnvironment.class, this);
         log = Log.instance(context);
         source = Source.instance(context);
+        target = Target.instance(context);
         diags = JCDiagnostic.Factory.instance(context);
         options = Options.instance(context);
         printProcessorInfo = options.isSet(Option.XPRINTPROCESSORINFO);
@@ -250,8 +254,9 @@ public class JavacProcessingEnvironment implements ProcessingEnvironment, Closea
 
     private Set<String> initPlatformAnnotations() {
         final String module_prefix =
-            Feature.MODULES.allowedInSource(source) ? "java.base/" : "";
-        return Set.of(module_prefix + "java.lang.Deprecated",
+            Feature.MODULES.allowedInSource(source, target) ? "java.base/" : "";
+        return Collections.unmodifiableSet(new HashSet<>(Arrays.asList(
+                      module_prefix + "java.lang.Deprecated",
                       module_prefix + "java.lang.FunctionalInterface",
                       module_prefix + "java.lang.Override",
                       module_prefix + "java.lang.SafeVarargs",
@@ -264,7 +269,7 @@ public class JavacProcessingEnvironment implements ProcessingEnvironment, Closea
                       module_prefix + "java.lang.annotation.Retention",
                       module_prefix + "java.lang.annotation.Target",
 
-                      module_prefix + "java.io.Serial");
+                      module_prefix + "java.io.Serial")));
     }
 
     private void initProcessorLoader() {
@@ -281,8 +286,9 @@ public class JavacProcessingEnvironment implements ProcessingEnvironment, Closea
                     ? fileManager.getClassLoader(ANNOTATION_PROCESSOR_PATH)
                     : fileManager.getClassLoader(CLASS_PATH);
 
-                if (options.isSet("accessInternalAPI"))
-                    ModuleHelper.addExports(getClass().getModule(), processorClassLoader.getUnnamedModule());
+                //XXX:
+//                if (options.isSet("accessInternalAPI"))
+//                    ModuleHelper.addExports(getClass().getModule(), processorClassLoader.getUnnamedModule());
 
                 if (processorClassLoader != null && processorClassLoader instanceof Closeable closeable) {
                     compiler.closeables = compiler.closeables.prepend(closeable);
@@ -342,7 +348,7 @@ public class JavacProcessingEnvironment implements ProcessingEnvironment, Closea
             platformProcessors = platformProvider.getAnnotationProcessors()
                                                  .stream()
                                                  .map(PluginInfo::getPlugin)
-                                                 .toList();
+                                                 .collect(Collectors.toList());
         }
         List<Iterator<? extends Processor>> iterators = List.of(processorIterator,
                                                                 platformProcessors.iterator());
@@ -823,7 +829,7 @@ public class JavacProcessingEnvironment implements ProcessingEnvironment, Closea
                 if (psi.processorIterator.hasNext()) {
                     ProcessorState ps = new ProcessorState(psi.processorIterator.next(),
                                                            log, source, dcfh,
-                                                           Feature.MODULES.allowedInSource(source),
+                                                           Feature.MODULES.allowedInSource(source, target),
                                                            JavacProcessingEnvironment.this,
                                                            lint);
                     psi.procStateList.add(ps);
@@ -891,7 +897,7 @@ public class JavacProcessingEnvironment implements ProcessingEnvironment, Closea
 
         for(TypeElement a  : annotationsPresent) {
             ModuleElement mod = elementUtils.getModuleOf(a);
-            String moduleSpec = Feature.MODULES.allowedInSource(source) && mod != null ? mod.getQualifiedName() + "/" : "";
+            String moduleSpec = Feature.MODULES.allowedInSource(source, target) && mod != null ? mod.getQualifiedName() + "/" : "";
             unmatchedAnnotations.put(moduleSpec + a.getQualifiedName().toString(),
                                      a);
         }
