@@ -62,6 +62,7 @@ import java.util.stream.Stream;
 import jdk.javadoc.internal.doclets.toolkit.BaseConfiguration;
 import jdk.javadoc.internal.doclets.toolkit.BaseOptions;
 import jdk.javadoc.internal.doclets.toolkit.PropertyUtils;
+import org.frgaal.CollectionShims;
 
 /**
  * This class computes the main data structure for the doclet's
@@ -242,7 +243,7 @@ public class VisibleMemberTable {
      */
     public List<Element> getAllVisibleMembers(Kind kind) {
         ensureInitialized();
-        return visibleMembers.getOrDefault(kind, List.of());
+        return visibleMembers.getOrDefault(kind, CollectionShims.list());
     }
 
     /**
@@ -254,9 +255,9 @@ public class VisibleMemberTable {
      */
     public List<Element> getVisibleMembers(Kind kind, Predicate<Element> p) {
         ensureInitialized();
-        return visibleMembers.getOrDefault(kind, List.of()).stream()
+        return visibleMembers.getOrDefault(kind, CollectionShims.list()).stream()
                 .filter(p)
-                .toList();
+                .collect(Collectors.toList());
     }
 
     /**
@@ -495,7 +496,7 @@ public class VisibleMemberTable {
             default:
                 List<Element> list = lmt.getOrderedMembers(kind).stream()
                         .filter(this::mustDocument)
-                        .toList();
+                        .collect(Collectors.toList());
                 visibleMembers.put(kind, list);
                 break;
         }
@@ -549,7 +550,7 @@ public class VisibleMemberTable {
         // Prefix local results first
         List<Element> list = Stream.concat(lmt.getOrderedMembers(kind).stream(), inheritedStream)
                                    .filter(this::mustDocument)
-                                   .toList();
+                                   .collect(Collectors.toList());
 
         visibleMembers.put(kind, list);
     }
@@ -608,7 +609,7 @@ public class VisibleMemberTable {
         // evaluated eagerly with toList().
         List<Element> inheritedMethods = parentMethods.stream()
                 .filter(e -> allowInheritedMethod((ExecutableElement) e, overriddenByTable, lmt))
-                .toList();
+                .collect(Collectors.toList());
 
         // filter out "simple overrides" from local methods
         Predicate<ExecutableElement> nonSimpleOverride = m -> {
@@ -626,7 +627,7 @@ public class VisibleMemberTable {
         // FIXME add a test to assert the order or remove that part of the comment above ^
         List<Element> list = Stream.concat(localStream, inheritedMethods.stream())
                 .filter(this::mustDocument)
-                .toList();
+                .collect(Collectors.toList());
 
         visibleMembers.put(Kind.METHODS, list);
 
@@ -900,26 +901,26 @@ public class VisibleMemberTable {
         }
 
         List<Element> getOrderedMembers(Kind kind) {
-            return orderedMembers.getOrDefault(kind, List.of());
+            return orderedMembers.getOrDefault(kind, CollectionShims.list());
         }
 
         List<Element> getMembers(Name simpleName, Kind kind) {
-            return namedMembers.getOrDefault(kind, Map.of())
-                    .getOrDefault(simpleName, List.of());
+            return namedMembers.getOrDefault(kind, CollectionShims.map())
+                    .getOrDefault(simpleName, CollectionShims.list());
         }
 
         <T extends Element> List<T> getMembers(Name simpleName, Kind kind, Class<T> clazz) {
             return getMembers(simpleName, kind)
                     .stream()
                     .map(clazz::cast)
-                    .toList();
+                    .collect(Collectors.toList());
         }
 
         List<ExecutableElement> getPropertyMethods(Name simpleName) {
             return getMembers(simpleName, Kind.METHODS).stream()
                     .filter(m -> (utils.isPublic(m) || utils.isProtected(m)))
                     .map(m -> (ExecutableElement) m)
-                    .toList();
+                    .collect(Collectors.toList());
         }
     }
 
@@ -965,17 +966,17 @@ public class VisibleMemberTable {
             return;
 
         PropertyUtils pUtils = config.propertyUtils;
-        List<Element> list = visibleMembers.getOrDefault(Kind.METHODS, List.of())
+        List<Element> list = visibleMembers.getOrDefault(Kind.METHODS, CollectionShims.list())
                 .stream()
                 .filter(e -> pUtils.isPropertyMethod((ExecutableElement) e))
-                .toList();
+                .collect(Collectors.toList());
 
         visibleMembers.put(Kind.PROPERTIES, list);
 
         List<ExecutableElement> propertyMethods = list.stream()
                 .map(e -> (ExecutableElement) e)
                 .filter(e -> Objects.equals(utils.getEnclosingTypeElement(e), te))
-                .toList();
+                .collect(Collectors.toList());
 
         // Compute additional properties related sundries.
         for (ExecutableElement propertyMethod : propertyMethods) {
@@ -1046,7 +1047,7 @@ public class VisibleMemberTable {
         ImplementedMethods imf = getImplementedMethodsFinder(method);
         return imf.getImplementedMethods().stream()
                 .filter(this::isNotSimpleOverride)
-                .toList();
+                .collect(Collectors.toList());
     }
 
     public TypeMirror getImplementedMethodHolder(ExecutableElement method,
